// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package workload;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/labels/selector.proto";
import "endpoint.proto";

// endpoint REST API
service WorkloadV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "workload";
    // API Version.
    option (venice.apiVersion) = "v1";

    option (venice.apiGrpcCrudService) = "Endpoint";
    option (venice.apiRestService) = {
        Object: "Endpoint"
        Method: [ "get", "put", "delete", "post", "list" ]
    };
}
